# src/domain/user_subject/model.js
@@ -5,8 +5,25 @@ class UserSubject extends BaseModel {
       return 'users_subjects';
    }
 
+   static get defaultEager() {
+      return 'subject';
+   }
+
    static get idColumn() {
       return 'user_id';
+   }
+
+   static get relationMappings() {
+      return {
+         subject: {
+            relation: BaseModel.BelongsToOneRelation,
+            modelClass: __dirname + '/../subject/model.js',
+            join: {
+               from: 'users_subjects.subjectId',
+               to: 'subjects.id'
+            }
+         }
+      };
    }
 }
 
